--- a/Public/index.html
+++ b/Public/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+     <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+     })(window,document,'script','dataLayer','GTM-NZVWHSN');</script>
+     <!-- End Google Tag Manager -->
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="description" content="">
@@ -9,50 +16,79 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <head>
 <title>Voyage au Japon</title>
-<!-- Main css -->
+
+<!-- Main css (Qui relie le html et CSS) -->
+
 <link rel="stylesheet" href="/CSS/style.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-03CM693F6L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-03CM693F6L');
+</script>
 </head>
 
-<!-- Navigation section  -->
 <body>
-    <nav>
-        <ul>
-            <li><href="#" style="border-radius: 6px;">bloc 1</li>
-            <li><href="#">bloc 2</href></li>
-            <li><href="#">bloc 3</href></li>
-            <li><href="#">bloc 4</href></li>
-            <li><href="#">bloc 5</href></li>
-        </ul>
-    </nav>
-    <section id="about">
-        <div class="container">
-             <div class="row">
-   
-               <div id="bloc">   
-                       <div class="">
-                            <img src="../Images/image-1.jpg" width="300" height="280" class="img-responsive" alt="Kyoto">
-                       </div>
-   
-                       <div class="col-md-4 col-sm-12">
-                            <h2>Magnet Studio</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                       </div>
-               </div>  
-                       <div class="col-md-8 col-sm-12">
-                        <img src="../Images/image-2.jpg" width="300" height="280" class="img-responsive" alt="Kyoto">
-                   </div>
+     <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZVWHSN"
+     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+     <!-- End Google Tag Manager (noscript) -->
+<!-- Navigation section  -->
+<header>
+     <div id="logo"><img src="../Images/logo-japon.png" width="100" height="100" alt="Logo japon"/></div>
+     <nav>
+         <ul>
+             <li><a href="#">Les visites</a></li>
+             <li><a href="#">Les plats</a></li>
+             <li><a href="#">Les transports</a></li>
+             <li><a href="#">Les activités</a></li>
+             <li><a href="#">Les infos pratiques</a></li>
+         </ul>
+     </nav>
+ </header>   
 
-                   <div class="col-md-4 col-sm-12">
-                        <h2>Magnet Studio</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                   </div>
-
-                   <div class="col-md-8 col-sm-12">
-                    <img src="../Images/image-3.jpg" width="300" height="280" class="img-responsive" alt="Kyoto">
+<!-- Main section  -->    
+<main></main>  
+<!--section premier bloc : image et texte-->
+<section>
+     <article>                
+         <div id="image"><img class="image" src="../Images/image-1.jpg"  alt="Tokyo"/></div>
+         <div id="contenu">
+             <time>Le 15 septembre 2019</time>
+               <h2>Visite de Tokyo</h2>
+                <p>Capitale animée du Japon, Tokyo associe les styles ultramodernes et 
+               traditionnels, dans un mélange de gratte-ciel aux néons lumineux et de 
+               temples anciens. Le somptueux Meiji-jingū est un sanctuaire shinto 
+               réputé pour son entrée imposante et les bois qui l'environnent. Le 
+               palais impérial est entouré de vastes jardins publics. Les nombreux
+               musées de la ville proposent des expositions allant de l'art classique,
+               au musée national de Tokyo, à un théâtre kabuki reconstruit, au musée 
+               d'Edo-Tokyo. </p>
+             <a class="categorie" href="#">CATEGORIE 1</a>
+             <a class="categorie" href="#">CATEGORIE 2</a>
+         </div>
+     </article>
+     <br>
+     <article>                
+         <div id="image"><img class="image" src="../Images/image-2.jpg" alt="Osaka"/></div>
+         <div id="contenu">
+             <time>Le 12 Novembre 2020</time>
+             <h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</h2>
+             <p> Il est simplement un texte factice de l'industrie de l'impression et de la composition. 
+                 Lorem Ipsum est le texte factice standard de l'industrie depuis les années 1500, 
+                 quand un imprimeur inconnu a pris une galère de caractères et l'a brouillée pour en faire un livre de spécimens. 
+                 Il a survécu non seulement cinq siècles, mais aussi le saut dans la composition électronique, 
+                 demeurant essentiellement inchangé.Lorem Ipsum est le texte factice standard de l'industrie depuis les années 1500, 
+                 quand un imprimeur inconnu a pris une galère de caractères et l'a brouillée pour en faire un livre de spécimens. 
+                 Il a survécu non seulement cinq siècles, mais aussi le saut dans la composition électronique, 
+                 demeurant essentiellement inchangé </p>
+                 <a class="categorie" href="#">CATEGORIE 1</a>
+                 <a class="categorie" href="#">CATEGORIE 2</a>    
                </div>
-
+          </article>
                <div class="col-md-4 col-sm-12">
                     <h2>Magnet Studio</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
@@ -69,6 +105,21 @@
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
            </div>
     </section>
+</main>  
+    <!--ligne de séparation-->
+    <hr>
 
+    <!--Footer comprenant les infos legales-->
+    <footer id="BasDePage">
+            <div class="infosAgence"><p class="copyright"> Wedrive - © 2013 tous droits réservés</p><p class="nomAgence">Design agence Wype</p></div>
+            <div class="pageslegales">
+               <ul>
+                   <li><a href="#">Mentions légales</a></li>
+                   <li><a href="#">Conditions générales</a></li>
+                   <li><a href="#">Presse</a></li>
+                   <li><a href="#">Contact</a></li>
+               </ul>
+           </div>
+    </footer>
 </body>
 </html>
