--- a/Public/index.html
+++ b/Public/index.html
@@ -20,6 +20,7 @@
 <!-- Main css (Qui relie le html et CSS) -->
 
 <link rel="stylesheet" href="/CSS/style.css">
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-03CM693F6L"></script>
 <script>
@@ -29,6 +30,22 @@
 
   gtag('config', 'G-03CM693F6L');
 </script>
+
+<script type="application/ld+json">
+     {
+         "@context": "http://schema.org",
+         "@type": "Page html",
+         "author": "Chukwudi Nnaemeka",
+         "Address": {
+             "@type":"PostalAddress",
+             "addressLocality": "France",
+             "addressRegion": "Paris",
+             "streetAddress": "14 rue Lakanal"
+         },
+         "description": "Intégration d'une page Html/CSS",
+         "name": "Voyage au Japon",
+         "telephone": "XXXXXXXXXX"}
+     </script>
 </head>
 
 <body>
@@ -51,7 +68,7 @@
  </header>   
 
 <!-- Main section  -->    
-<main></main>  
+<main>
 <!--section premier bloc : image et texte-->
 <section>
      <article>                
@@ -61,57 +78,80 @@
                <h2>Visite de Tokyo</h2>
                 <p>Capitale animée du Japon, Tokyo associe les styles ultramodernes et 
                traditionnels, dans un mélange de gratte-ciel aux néons lumineux et de 
-               temples anciens. Le somptueux Meiji-jingū est un sanctuaire shinto 
+               temples anciens.
+               <br><br>Le somptueux Meiji-jingū est un sanctuaire shinto 
                réputé pour son entrée imposante et les bois qui l'environnent. Le 
                palais impérial est entouré de vastes jardins publics. Les nombreux
                musées de la ville proposent des expositions allant de l'art classique,
                au musée national de Tokyo, à un théâtre kabuki reconstruit, au musée 
                d'Edo-Tokyo. </p>
              <a class="categorie" href="#">CATEGORIE 1</a>
-             <a class="categorie" href="#">CATEGORIE 2</a>
          </div>
      </article>
      <br>
      <article>                
          <div id="image"><img class="image" src="../Images/image-2.jpg" alt="Osaka"/></div>
          <div id="contenu">
-             <time>Le 12 Novembre 2020</time>
-             <h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</h2>
-             <p> Il est simplement un texte factice de l'industrie de l'impression et de la composition. 
-                 Lorem Ipsum est le texte factice standard de l'industrie depuis les années 1500, 
-                 quand un imprimeur inconnu a pris une galère de caractères et l'a brouillée pour en faire un livre de spécimens. 
-                 Il a survécu non seulement cinq siècles, mais aussi le saut dans la composition électronique, 
-                 demeurant essentiellement inchangé.Lorem Ipsum est le texte factice standard de l'industrie depuis les années 1500, 
-                 quand un imprimeur inconnu a pris une galère de caractères et l'a brouillée pour en faire un livre de spécimens. 
-                 Il a survécu non seulement cinq siècles, mais aussi le saut dans la composition électronique, 
-                 demeurant essentiellement inchangé </p>
+             <time>30 septembre 2019</time>
+             <h2>Visite d'Osaka</h2>
+             <p>   Osaka est une grande ville portuaire et un centre commerçant de l'île
+                   japonaise d'Honshū. Elle est connue pour son architecture moderne, sa
+                    vie nocturne et la qualité de sa street food.<br><br>Principal monument 
+                    historique de la ville, le château d'Osaka, construit au XVIe siècle
+                     lors du shogunat, a subi plusieurs restaurations. Il est entouré de 
+                     douves ainsi que d'un parc planté de pruniers, de pêchers et de 
+                     cerisiers à fleurs. Le Sumiyoshi-taisha est l'un des plus anciens sanctuaires shinto du pays. </p>
                  <a class="categorie" href="#">CATEGORIE 1</a>
                  <a class="categorie" href="#">CATEGORIE 2</a>    
                </div>
           </article>
-               <div class="col-md-4 col-sm-12">
-                    <h2>Magnet Studio</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-               </div>
-
-               <div class="col-md-8 col-sm-12">
-                <img src="../Images/image-4.jpg" width="300" height="280" class="img-responsive" alt="Kyoto">
-           </div>
-
-           <div class="col-md-4 col-sm-12">
-                <h1>Magnet Studio</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-           </div>
-    </section>
+          <br>
+          <article>                
+               <div id="image"></div><img class="image" src="../Images/image-3.jpg" alt="Hakone"/></div>
+               <div id="contenu">
+                   <time>Le 15 octobre 2019</time>
+                   <h2>Visite d'Hakone</h2>
+                   <p> Il akone, ville japonaise de montagne située au cœur du parc national de 
+                       Fuji-Hakone-Izu, à l'ouest de Tokyo, est connue pour ses sources d'eau chaude
+                       (onsen) et le panorama qu'elle offre sur l'emblématique volcan du mont Fuji. Elle
+                       abrite également le sanctuaire shinto d'Hakone, doté d'une porte "torii" rouge
+                       émergeant du lac Ashi, accessible en bateau. C'est également le lieu des sources d'eau soufrée
+                       bouillonnante de la vallée d'Ōwakudani.</p>
+                       <a class="categorie" href="#">CATEGORIE 1</a>    
+                     </div>
+                </article>
+                <br>
+                <article>                
+                    <div id="image"><img class="image" src="../Images/image-4.jpg" alt="Kyoto"/></div>
+                    <div id="contenu">
+                        <time>Le 30 octobre 2019</time>
+                        <h2>Visite de Kyoto</h2>
+                        <p> Il akone, ville japonaise de montagne située au cœur du parc national de 
+                            Fuji-Hakone-Izu, à l'ouest de Tokyo, est connue pour ses sources d'eau chaude
+                            (onsen) et le panorama qu'elle offre sur l'emblématique volcan du mont Fuji. Elle
+                            abrite également le sanctuaire shinto d'Hakone, doté d'une porte "torii" rouge
+                            émergeant du lac Ashi, accessible en bateau. C'est également le lieu des sources d'eau soufrée
+                            bouillonnante de la vallée d'Ōwakudani.</p>
+                            <a class="categorie" href="#">CATEGORIE 1</a>
+                            <a class="categorie" href="#">CATEGORIE 2</a>    
+                          </div>
+                     </article>
+    </section> 
+    <br>
+    <!--pagination-->
+    <div class="pagination">
+    <a href="#">Précédent</a>
+    <a href="#">Suivant</a> 
+    </div>
 </main>  
-    <!--ligne de séparation-->
+
+    <!--Séparation-->
     <hr>
+    <br>
 
     <!--Footer comprenant les infos legales-->
     <footer id="BasDePage">
-            <div class="infosAgence"><p class="copyright"> Wedrive - © 2013 tous droits réservés</p><p class="nomAgence">Design agence Wype</p></div>
+            <div class="infosChukAgence"><p class="copyright"> ChukAgency - © 2020 tous droits réservés</p><p class="nomAgence">Design agence Wype</p></div>
             <div class="pageslegales">
                <ul>
                    <li><a href="#">Mentions légales</a></li>
